--- a/project/washes.html
+++ b/project/washes.html
@@ -29,38 +29,48 @@
     </header>
     <main>
         <section class="top-section-grid">
-            <div class="location-input-container">
-                <h2>Find a Wash Location</h2>
-                <input type="text" id="locationInput" placeholder="Enter your location">
-                <button id="findLocationButton">Search</button>
-            </div>
-            <div class="car-wash-image-main">
-                <img src="images/CarwashImage1.jpeg" alt="Modern Car Wash Bay">
-            </div>
-        </section>
+            <h3>About Us</h3>
+            <p>Welcome to Splashy Dashiez! We're dedicated to providing your vehicle with the ultimate clean, combining speed, quality, and environmental consciousness. Our state-of-the-art facilities and premium products ensure your car leaves sparkling every time. We offer a range of services designed to meet every need and budget, from quick washes to long-lasting protective coatings.</p>
 
-        <section class="display-section">
-            <h2>Welcome to Splashy Dashiez!</h2>
-            <p>Your ultimate destination for a sparkling clean ride. We offer state-of-the-art car wash services designed to give your vehicle the care it deserves.</p>
-            <p>Explore our membership programs, learn interesting facts about car washing, and find a convenient location near you.</p>
-
-            <div class="membership-program-section">
-                <h3>Our Membership Programs</h3>
-                <p>Join our exclusive membership program today and enjoy unlimited washes, special discounts, and priority service. Keep your car sparkling clean all year round with our flexible plans designed to fit your needs.</p>
-                <p>Choose from a variety of tiers, including Basic, Premium, and Ultimate, each offering increasing benefits and savings. Sign up online or at any of our convenient locations!</p>
+            <div class="price-list-container">
+            <h4>Our Signature Car Washes</h4>
+            <div class="price-item">
+                <h5>Express Wash</h5>
+                <p class="price">$12.00</p>
+                <ul>
+                    <li>High-Pressure Rinse</li>
+                    <li>Soft-Touch Foam Wash</li>
+                    <li>Spot-Free Rinse</li>
+                    <li>Powerful Air Dry</li>
+                    <li>Basic Wheel Clean</li>
+                </ul>
+                <button>Choose Wash</button>
             </div>
-            <div class="facts-section">
-                <div class="fact-item">
-                    <div class="img-placeholder"><img src="images/Imagefact1.jpg" alt="Ultimate Wash/Premium Wash with Protective Coatings" width="250" height="75"></div>
-                    Ultimate Wash/Premium Wash with Protective Coatings
-                </div>
-                <div class="fact-item">
-                    <div class="img-placeholder"><img src="images/Imagefact2.jpg" alt="Ceramic or Graphene Infused Wash" width="250" height="75"></div>
-                    Ceramic or Graphene Infused Wash
-                </div>
-                <div class="fact-item">
-                    <div class="img-placeholder"><img src="images/Imagefact3.jpg" alt="Monthly Unlimited Wash Club with Top-Tier Plan" width="250" height="75"></div>
-                    Monthly Unlimited Wash Club with Top-Tier Plan
+            <div class="price-item featured">
+                <h5>Premium Shine Wash</h5>
+                <p class="price">$28.00</p>
+                <ul>
+                    <li>**All Express Wash Features**</li>
+                    <li>Underbody Flush</li>
+                    <li>Tire & Rim Deep Clean</li>
+                    <li>Triple Foam Polish Application</li>
+                    <li>Clear Coat Protectant</li>
+                    <li>Tire Shine Application</li>
+                </ul>
+                <button>Choose Wash</button>
+            </div>
+            <div class="price-item">
+                <h5>Ultimate Protection Wash</h5>
+                <p class="price">$45.00</p>
+                <ul>
+                    <li>**All Premium Shine Wash Features**</li>
+                    <li>**Ultimate Wash/Premium Wash with Protective Coatings**</li>
+                    <li>Ceramic or Graphene Infused Wash</li>
+                    <li>Advanced Paint Sealant</li>
+                    <li>Rain Repel Windshield Treatment</li>
+                    <li>Air Freshener Upon Exit</li>
+                </ul>
+                <button>Choose Wash</button>
                 </div>
             </div>
         </section>
