--- a/project/project.html
+++ b/project/project.html
@@ -22,8 +22,8 @@
         <nav>
             <ul>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Washes</a></li>
+                <li><a href="project.html">Home</a></li>
+                <li><a href="washes.html">Washes</a></li>
             </ul>
         </nav>
     </header>
