--- a/project/washes.html
+++ b/project/washes.html
@@ -21,9 +21,9 @@
         <button class="close-button" style="display: none;">✕</button>
         <nav>
             <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Washes</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="project.html">Home</a></li>
+                <li><a href="washes.html">Washes</a></li>
             </ul>
         </nav>
     </header>
