--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -30,7 +30,13 @@
     <main>
         <section class="top-section-grid">
             <h3>About Us</h3>
-            <p>description</p>
+            <p>
+                🧼 Splashy Dashiez
+
+                🌊 “Splashy Splash! Our Professional shine is our specialty.”
+
+                🧽 Splashy Dashiez is dedicated to bring you an awesome and welcoming atmosphere where you can have fun and relax in a cozy and comfortable house. Splashy Dashiez's staff team are trained to give you an experience that you have never experienced before. Why not come check us out at the car wash? We offer some great ticket options from a regular wash to an express wash just meant for your car! 
+            </p>
         </section>
         <section class="display-section">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1056.3061378889022!2d-117.12104143631768!3d32.74971051723088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9545c1953c187%3A0x5d96cf8ab103e524!2s3419%20University%20Ave%2C%20San%20Diego%2C%20CA%2092104%2C%20USA!5e1!3m2!1sen!2sjp!4v1749853145201!5m2!1sen!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
