--- a/project/project.html
+++ b/project/project.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main>
-        <section class="top-section-grid">
+        <section class="hero-section-grid">
             <div class="location-input-container">
                 <h2>Find a Wash Location</h2>
                 <input type="text" id="locationInput" placeholder="Enter your location">
