--- a/project/washes.html
+++ b/project/washes.html
@@ -28,49 +28,61 @@
         </nav>
     </header>
     <main>
-        <section class="top-section-grid">
-            <div class="price-list-container">
+        <section class="wash-types-section">
             <h4>Our Signature Car Washes</h4>
-            <div class="price-item">
-                <h5>Express Wash</h5>
-                <p class="price">$12.00</p>
-                <ul>
-                    <li>High-Pressure Rinse</li>
-                    <li>Soft-Touch Foam Wash</li>
-                    <li>Spot-Free Rinse</li>
-                    <li>Powerful Air Dry</li>
-                    <li>Basic Wheel Clean</li>
-                </ul>
-                <button>Choose Wash</button>
-            </div>
-            <div class="price-item featured">
-                <h5>Premium Shine Wash</h5>
-                <p class="price">$28.00</p>
-                <ul>
-                    <li>**All Express Wash Features**</li>
-                    <li>Underbody Flush</li>
-                    <li>Tire & Rim Deep Clean</li>
-                    <li>Triple Foam Polish Application</li>
-                    <li>Clear Coat Protectant</li>
-                    <li>Tire Shine Application</li>
-                </ul>
-                <button>Choose Wash</button>
-            </div>
-            <div class="price-item">
-                <h5>Ultimate Protection Wash</h5>
-                <p class="price">$45.00</p>
-                <ul>
-                    <li>**All Premium Shine Wash Features**</li>
-                    <li>**Ultimate Wash/Premium Wash with Protective Coatings**</li>
-                    <li>Ceramic or Graphene Infused Wash</li>
-                    <li>Advanced Paint Sealant</li>
-                    <li>Rain Repel Windshield Treatment</li>
-                    <li>Air Freshener Upon Exit</li>
-                </ul>
-                <button>Choose Wash</button>
+            <div class="price-list-container">
+                <div class="price-item">
+                    <h5>Express Wash</h5>
+                    <p class="price">$12.00</p>
+                    <ul>
+                        <li>High-Pressure Rinse</li>
+                        <li>Soft-Touch Foam Wash</li>
+                        <li>Spot-Free Rinse</li>
+                        <li>Powerful Air Dry</li>
+                        <li>Basic Wheel Clean</li>
+                    </ul>
+                    <button>Choose Wash</button>
+                </div>
+                <div class="price-item featured">
+                    <h5>Premium Shine Wash</h5>
+                    <p class="price">$28.00</p>
+                    <ul>
+                        <li>**All Express Wash Features**</li>
+                        <li>Underbody Flush</li>
+                        <li>Tire & Rim Deep Clean</li>
+                        <li>Triple Foam Polish Application</li>
+                        <li>Clear Coat Protectant</li>
+                        <li>Tire Shine Application</li>
+                    </ul>
+                    <button>Choose Wash</button>
+                </div>
+                <div class="price-item">
+                    <h5>Ultimate Protection Wash</h5>
+                    <p class="price">$45.00</p>
+                    <ul>
+                        <li>**All Premium Shine Wash Features**</li>
+                        <li>**Ultimate Wash/Premium Wash with Protective Coatings**</li>
+                        <li>Ceramic or Graphene Infused Wash</li>
+                        <li>Advanced Paint Sealant</li>
+                        <li>Rain Repel Windshield Treatment</li>
+                        <li>Air Freshener Upon Exit</li>
+                    </ul>
+                    <button>Choose Wash</button>
                 </div>
             </div>
         </section>
+
+        <section class="find-wash-section">
+            <div class="find-wash-content">
+                <h2>Find a Splashy Dashiez Car Wash Near You!</h2>
+                <p>Ready for a sparkling clean car? Use our locator to find the nearest Splashy Dashiez car wash. Experience our exceptional service and state-of-the-art facilities firsthand!</p>
+                <button id="findLocationButtonBottom">Find My Location</button>
+            </div>
+            <div class="find-wash-image">
+                <img src="images/CarwashMap.jpeg" alt="Car wash location on a map" width="400">
+            </div>
+        </section>
+
     </main>
     <footer>
         <p>&copy; <span id="year"></span> Everett Havey | Tokyo, Japan</p>
