--- a/project/washes.html
+++ b/project/washes.html
@@ -6,7 +6,7 @@
     <title>WDD 131 | Dynamic Web Fundamentals - Everett Havey</title>
     <meta name="description" content="WDD 131 | Everett Havey">
     <meta name="author" content="Everett Havey">
-    <link rel="stylesheet" href="styles/project.css">
+    <link rel="stylesheet" href="styles/washes.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
