--- a/project/washes.html
+++ b/project/washes.html
@@ -79,7 +79,7 @@
                 <button id="findLocationButtonBottom">Find My Location</button>
             </div>
             <div class="find-wash-image">
-                <img src="images/CarWashImage2.webp" alt="Car wash location on a map" width="500">
+                <img src="images/CarWashImage2.webp" alt="Car wash location on a map" width="500" loading="lazy">
             </div>
         </section>
 
