--- a/project/washes.html
+++ b/project/washes.html
@@ -32,7 +32,7 @@
             <h4>Our Signature Car Washes</h4>
             <div class="price-list-container">
                 <div class="price-item">
-                    <h5>Express Wash</h5>
+                    <h5>Regular Wash</h5>
                     <p class="price">$12.00</p>
                     <ul>
                         <li>High-Pressure Rinse</li>
@@ -44,7 +44,7 @@
                     <button>Choose Wash</button>
                 </div>
                 <div class="price-item featured">
-                    <h5>Premium Shine Wash</h5>
+                    <h5>Premium Wash</h5>
                     <p class="price">$28.00</p>
                     <ul>
                         <li>**All Express Wash Features**</li>
@@ -57,7 +57,7 @@
                     <button>Choose Wash</button>
                 </div>
                 <div class="price-item">
-                    <h5>Ultimate Protection Wash</h5>
+                    <h5>Express Wash</h5>
                     <p class="price">$45.00</p>
                     <ul>
                         <li>**All Premium Shine Wash Features**</li>
